2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-date-editor.c
	(hildon_date_editor_keypress): removed the unnecessary check for
	the position of the cursor in the text-field which was hindering
	the Left key from working as expected.


2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-date-editor.c: connect 'toggled' signal 
	after setting the toggle_button active. Prevents GLIB_CRITICALs. 

2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-dialoghelp.c: minor cleanups

	
2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-font-selection-dialog.c
	(hildon_font_selection_dialog_show_preview): set line wrap for
	preview label.


2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	* hildon-widgets/hildon-date-editor.c
	(hildon_child_forall): cast 'container'
	(hildon_date_editor_size_allocate): adjusted height allocation.


2006-03-13  Luc Pionchon  <luc.pionchon@nokia.com>

	Cleanup calendar popup,

	* hildon-widgets/hildon-calendar-popup.c: 
	- updated 'longdesc' comment.
	- removed gtk-infoprint.h from included headers (unused).

	(struct HildonCalendarPopupPrivate): removed member
	'can_exit' (useless).
	(hildon_calendar_day_selected): removed (useless).
	(hildon_calendar_allow_exit): likewise.
	(hildon_calendar_deny_exit): likewise.

	(hildon_calendar_selected_date): new function. replaces
	hildon_calendar_allow_exit()

	(hildon_calendar_popup_init):
	- Removed initialization for 'can_exit'. 
	- Removed connection to removed useless functions.
	- Connect "selected_date" to hildon_calendar_selected_date().
	- Do not grab the focus (useless)

	(hildon_key_pressed): just handle ESC and Return keys.

	(hildon_calendar_popup_get_property): removed unused variables.


2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* hildon-widgets/hildon-caption.c
	* hildon-widgets/hildon-composite-widget.h
	* hildon-widgets/hildon-get-password-dialog.c